--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:mariadb://localhost:3308/project_manager
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.use-new-id-generator-mappings= false
 
+logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type=debug
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE 
