--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ logging.level.org.hibernate.SQL=debug
 #logging.level.org.hibernate.type=debug
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE 
+
+logging.level.com.projectmanager=debug
